src/objects/Budget__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Budget_Date__c</fullName>
        <description>Only the Month / Year portion of this date is used for calculations, the Day is ignored.</description>
        <inlineHelpText>Only the Month / Year portion of this date is used for calculations, the Day is ignored.</inlineHelpText>
        <label>Budget Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Budget_vs_Invoice_Forecast__c</fullName>
        <formula>Invoice_Forecast_Amount__c  - Revenue_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget vs Invoice/Forecast</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CH_Product_Name__c</fullName>
        <externalId>true</externalId>
        <label>CH Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinic__c</fullName>
        <label>Clinic</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clinics</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_Revenue__c</fullName>
        <formula>Won_Revenue__c + Weighted_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Expected_Target_Achievement__c</fullName>
        <formula>IF (
    Expected_Revenue__c = 0 ||
    ISBLANK(Expected_Revenue__c) ||
    Revenue_Target__c = 0 ||
    ISBLANK(Revenue_Target__c),
    0,
    Expected_Revenue__c / Revenue_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Target % Achievement</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Expected_Variance_Amount__c</fullName>
        <formula>Expected_Revenue__c - Revenue_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected Variance Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Forecast_Amount__c</fullName>
        <formula>IF(YEAR(Budget_Date__c) &lt; YEAR(TODAY()) ||
   (YEAR(Budget_Date__c) = YEAR(TODAY()) &amp;&amp; MONTH(Budget_Date__c) &lt; (MONTH(TODAY()))-1),
    Invoice_Total_Amount__c,
    Won_Revenue__c +  Weighted_Revenue__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice/Forecast Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Percent_Target_Achieved__c</fullName>
        <formula>IF( Invoice_Total_Amount__c  = 0, 0, Invoice_Total_Amount__c  / Revenue_Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice % Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice_Total_Amount__c</fullName>
        <label>Invoice Total Amount</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Variance__c</fullName>
        <formula>Invoice_Total_Amount__c - Revenue_Target__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <formula>MONTH(Budget_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pipeline_Revenue__c</fullName>
        <label>Pipeline Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pipeline_as_of_Target__c</fullName>
        <formula>IF (
    Pipeline_Revenue__c = 0 ||
    ISBLANK(Pipeline_Revenue__c) ||
    Revenue_Target__c = 0 ||
    ISBLANK(Revenue_Target__c),
    0,
    Pipeline_Revenue__c / Revenue_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pipeline as % of Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product_Code_Name__c</fullName>
        <label>Product Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Budgets</relationshipLabel>
        <relationshipName>Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue_Target__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Target_Achieved__c</fullName>
        <formula>IF(Won_Revenue__c = 0, 0, Won_Revenue__c / Revenue_Target__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Target Achieved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Specific</fullName>
                </value>
                <value>
                    <fullName>Catch All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weighted_Pipeline_as_Target__c</fullName>
        <formula>IF(
    Weighted_Revenue__c = 0 ||
    ISBLANK(Weighted_Revenue__c) ||
    Revenue_Target__c = 0 ||
    ISBLANK(Revenue_Target__c),
    0,
    Weighted_Revenue__c / Revenue_Target__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weighted Pipeline as % Target</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Weighted_Revenue__c</fullName>
        <label>Weighted Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Won_Revenue__c</fullName>
        <label>Won Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(Budget_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Budget</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Budget_Date__c</columns>
        <columns>Revenue_Target__c</columns>
        <columns>Won_Revenue__c</columns>
        <columns>Pipeline_Revenue__c</columns>
        <columns>Invoice_Total_Amount__c</columns>
        <columns>Type__c</columns>
        <columns>Product__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{00000}</displayFormat>
        <label>Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budgets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_or_Owner_Required</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(Account__c) &amp;&amp; ISBLANK(Account_Owner__c)) ||
(!ISBLANK(Account__c) &amp;&amp; !ISBLANK(Account_Owner__c))</errorConditionFormula>
        <errorMessage>Either an Account or Account Owner (but not both) is required in order to save this record.</errorMessage>
    </validationRules>
</CustomObject>